<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.stonesdk.sdkdemo.activities.SendEmailActivity" >

    <TextView
        android:id="@+id/emailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_description" />

    <EditText
        android:id="@+id/emailUserText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailDescription">

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/emailSendDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_send_description"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/emailUserText" />

    <EditText
        android:id="@+id/emailSendText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_below="@+id/emailSendDescription" />

    <Button
        android:id="@+id/sendEmailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/email_send" />

</RelativeLayout>
