<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MifareActivity">

    <TextView
        android:id="@+id/card_uuid_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:text="@string/uuid_s"
        android:textAlignment="center"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/logTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_uuid_value" />


    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_detect_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="detectCard"
            android:text="@string/detect_card"/>
        <Button
            android:id="@+id/btn_cancel_detect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cancelDetectCard"
            android:text="Cancelar detecção"/>
        <Button
            android:id="@+id/btn_block_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="readBlockDialog"
            android:text="@string/read_block"/>
        <Button
            android:id="@+id/btn_block_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="writeCardDialog"
            android:text="@string/write_block"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>